DAGSS-11358 remove the z-index since the megamenu display is fixed after prod to sit content sync.

--- a/node-app/src/views/ca/base/base.scss
+++ b/node-app/src/views/ca/base/base.scss
@@ -9,12 +9,6 @@
 .header-white-stripe .slf-header-wrapper .desktop-header-wrapper .yellow-stripe {
     background-color: #FFFFFF;
 }
-
-/*display megamenu above other elements when hovered on*/
-.ca-sunlife-content-page .experiencefragment .layout-container.full-width-component {
-    position: relative !important;
-    z-index: 9 !important;
-}
 //Adding Custom Styling for Full Width Components Toggle (Desktop Only)
 /* Header Regions Menu, Footer */
 @media (min-width: $desktop-screen-min) {
